<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Insa Connect</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="password">Mot de passe</string>
    <string name="save">Sauvegarder et \n Connecter</string>
    <string name="check_savePassword">Retenir le mot de passe</string>
    <string name="preference_file_key">fr.vadim.insaconnect.PREFERENCE_FILE_KEY</string>
    <string name="save_ok">Votre login et mot de passe ont bien été sauvegardés</string>
    <string name="try_connect">Authentification en cours, surveillez les notifications." </string>
    <string name="no_connect">Tentative d\'authentification à la prochaine connexion </string>
    <string name="logout_page">Page de déconnexion</string>
    
    
    <string name="notif_title">INSA Connect</string>
    <string name="notif_noid">Veuillez renseigner vos identifiants INSA pour vous connecter</string>
    <string name="notif_erreur">Erreur de connexion, connexion manuelle requise</string>
    <string name="notif_ok">Vous êtes bien connecté au réseau de l\'INSA Lyon</string>
    

</resources>